vest-dsl/test/bad/choice_ints_undefined.vest
fmt(@tag: t) = choose(@tag) {
  1 => u8,
  2 => u16,
  3 => u32,
}
